--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test = "shoppingList">Mobile</li>
+		<li data-ns-test = "shoppingList">Perfume</li>
+		<li data-ns-test = "shoppingList">Wallet</li>
+	</ol>
+	<ul>
+		<li data-ns-test = "holidayList">Goa</li>
+		<li data-ns-test = "holidayList">Kerala</li>
+		<li data-ns-test = "holidayList">Hyderabad</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
